--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,9 @@
 .material-symbols-outlined {
   font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
 }
+.page-title{
+  font-family:serif;
+}
 
 /* navigation */
 .navigation-links {
@@ -26,10 +29,14 @@
   margin-left: 0;
   display: inline-block;
   background-color: whitesmoke;
+  border-radius: 8px;
+  padding-top: 8px;
+  padding-bottom: 8px;
 }
 .calendar-table table {
   margin: auto;
   background-color: white;
+  width: 90%;
 }
 .previous-month,
 .next-month,
@@ -37,15 +44,35 @@
   display: inline;
 }
 .month-title{
-  margin-left: 60px;
-  margin-right: 60px;
+  margin-left: 35%;
+  margin-right: 35%;
+  color: rgb(115, 115, 202);
 }
 .previous-month, .next-month{
-  background-color: white;
-  border: 1px solid lightgrey;
+  background-color: whitesmoke;
+  border: none;
+  padding: 5px;
   font-size: 12pt;
+  border-radius: 5px;
+}
+.previous-month:hover, .next-month:hover{
+  background-color: rgb(115, 115, 202);
+  color: white;
+}
+.previous-month{
+  display: inline-start;
 }
 .calendar-table td,
 th {
   width: 95px;
+}
+.calendar-table th{
+  font-family: serif;
+  padding-top: 5px;
+}
+.calendar-top-bar{
+  width: 90%;
+  margin: auto;
+  background-color: white;
+  padding-top: 8px;
 }
