--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,10 @@ th {
   font-family: serif;
   padding-top: 5px;
 }
+.calendar-table td:hover{
+background-color: rgb(219, 219, 236);
+}
+
 .calendar-top-bar{
   width: 90%;
   margin: auto;
