Completed Creation of Events Page

--- a/src/App.css
+++ b/src/App.css
@@ -73,10 +73,46 @@ th {
 .calendar-table td:hover{
 background-color: rgb(219, 219, 236);
 }
-
+.calendar-table td p {
+  margin: auto;
+  text-align: right;
+}
 .calendar-top-bar{
   width: 90%;
   margin: auto;
   background-color: white;
   padding-top: 8px;
+}
+
+/* Event Page */
+.event-inline-obj{
+  display: inline;
+}
+.new-event-container{
+  position: absolute;
+  margin-bottom: 20px;
+  bottom: 0;
+  margin-right: 20px;
+  right: 0;
+}
+.new-event-button{
+  background-color: rgb(115, 115, 202);
+  border: none;
+  border-radius: 8px;
+  padding: 5px;
+  color: white;
+}
+.edit-event-button{
+  background-color: whitesmoke;
+  border: none;
+  border-radius: 5px;
+  font-size: 14pt;
+}
+
+/* Event/Holiday card coloring */
+.holiday{
+  background-color: peachpuff;
+}
+.event{
+  background-color: rgb(179, 215, 229);
 }
