--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,17 @@
 .App {
   text-align: center;
 }
+body{
+  scrollbar-width: none;
+}
 .material-symbols-outlined {
   font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
 }
 .page-title{
   font-family:serif;
+}
+::-webkit-scrollbar {
+  display: none;
 }
 
 /* navigation */
@@ -83,6 +89,9 @@ background-color: rgb(219, 219, 236);
   background-color: white;
   padding-top: 8px;
 }
+.table-date{
+  align-items: flex-end;
+}
 
 /* Event Page */
 .event-inline-obj{
@@ -108,6 +117,7 @@ background-color: rgb(219, 219, 236);
   border-radius: 5px;
   font-size: 14pt;
 }
+
 
 /* Event/Holiday card coloring */
 .holiday{
