corrected sizing issue for holidays

--- a/src/App.css
+++ b/src/App.css
@@ -81,7 +81,6 @@ background-color: rgb(219, 219, 236);
 }
 .calendar-table td p {
   margin: auto;
-  text-align: right;
 }
 .calendar-top-bar{
   width: 90%;
@@ -91,6 +90,17 @@ background-color: rgb(219, 219, 236);
 }
 .table-date{
   align-items: flex-end;
+}
+.calendar-day-container{
+  position: relative;
+}
+.calendar-day{
+  text-align: right;
+  color: grey;
+  font-size: 11pt;
+  position:absolute;
+  bottom: 0;
+  right: 0;
 }
 
 /* Event Page */
@@ -121,7 +131,14 @@ background-color: rgb(219, 219, 236);
 
 /* Event/Holiday card coloring */
 .holiday{
-  background-color: peachpuff;
+  background-color: rgb(185, 244, 255);
+  font-size: 10pt;
+  text-align: left;
+  padding: 2px;
+  border-radius: 5px;
+  height: 18px;
+  overflow: hidden;
+  padding-left: 5px;
 }
 .event{
   background-color: rgb(179, 215, 229);
