--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,7 @@ body{
 .month-title{
   margin-left: 35%;
   margin-right: 35%;
-  color: rgb(115, 115, 202);
+  color: #6b9080;
 }
 .previous-month, .next-month{
   background-color: whitesmoke;
@@ -62,7 +62,7 @@ body{
   border-radius: 5px;
 }
 .previous-month:hover, .next-month:hover{
-  background-color: rgb(115, 115, 202);
+  background-color: #a4c3b2;
   color: white;
 }
 .previous-month{
@@ -70,14 +70,17 @@ body{
 }
 .calendar-table td,
 th {
-  width: 95px;
+  max-width: 50px;
+  word-wrap: normal;
+  height: 70px;
+  padding: 4px 4px 0px 4px;
 }
 .calendar-table th{
   font-family: serif;
   padding-top: 5px;
 }
 .calendar-table td:hover{
-background-color: rgb(219, 219, 236);
+background-color: #eaf4f4;
 }
 .calendar-table td p {
   margin: auto;
@@ -102,6 +105,15 @@ background-color: rgb(219, 219, 236);
   bottom: 0;
   right: 0;
 }
+.days-events, .day-td{
+  margin-top: 0;
+}
+.days-events{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
 
 /* Event Page */
 .event-inline-obj{
@@ -115,7 +127,7 @@ background-color: rgb(219, 219, 236);
   right: 0;
 }
 .new-event-button{
-  background-color: rgb(115, 115, 202);
+  background-color: #a4c3b2;
   border: none;
   border-radius: 8px;
   padding: 5px;
@@ -131,7 +143,7 @@ background-color: rgb(219, 219, 236);
 
 /* Event/Holiday card coloring */
 .holiday{
-  background-color: rgb(185, 244, 255);
+  background-color: #a4c3b2;
   font-size: 10pt;
   text-align: left;
   padding: 2px;
@@ -139,6 +151,9 @@ background-color: rgb(219, 219, 236);
   height: 18px;
   overflow: hidden;
   padding-left: 5px;
+}
+.holiday:hover{
+  height: fit-content;
 }
 .event{
   background-color: rgb(179, 215, 229);
