--- a/src/App.css
+++ b/src/App.css
@@ -178,8 +178,15 @@ th {
 .event-item:hover{
   box-shadow: 2px 2px 3px rgb(0,0,0,0.2)
 }
+#event-item-table td{
+  width: 200px;
+}
 .row1-item{
   padding: 5%;
+}
+.event-item-date{
+  left: 400px;
+  transform: translate(0, -60px);
 }
 .event-inline-obj{
   display: inline;
@@ -210,7 +217,7 @@ th {
 }
 .event-row-2 p{
   margin-top: 5px;
-  margin-left: 15px;
+  margin-left: 20px;
   color: grey;
   font-size: 11pt;
   font-style: italic;
