--- a/src/App.css
+++ b/src/App.css
@@ -157,6 +157,41 @@ th {
   left: 0;
   width: 100%;
 }
+input[type=checkbox]{
+  accent-color: #6b9080;
+}
+.filter-title{
+  font-weight: normal;
+}
+.checkbox:checked + .checkbox-label{
+  color:#31443c;
+  font-style: normal;
+}
+.checkbox-label{
+  color:grey;
+  font-style: italic;
+}
+.current-day-button{
+  background-color: rgb(51, 55, 59);
+  border: 0px;
+  border-radius: 8px;
+  padding: 5px 10px 8px 10px;
+  color: white;
+  font-family: sans-serif;
+  margin-top: 25vh;
+}
+.current-day-button:hover{
+  background-color: #6b9080;
+  transition: ease-in-out 0.25s;
+}
+.today-icon{
+  font-size: 12pt;
+  transform: translate(0, 2px);
+}
+.day-button-day-styling{
+  margin-top: 0;
+}
+
 /* Single calendar day styling*/
 .day-menu-item{
   display: inline;
@@ -164,7 +199,82 @@ th {
 }
 .day-menu-button{
   vertical-align: bottom;
-  
+}
+.day-schedule-container{
+  width: 70%;
+  margin-left: 15%;
+}
+.holiday-day-card{
+  background-color:#cde4d6;
+  width: 100%;
+  padding: 5px;
+  border-radius: 15px;
+  margin: 5px 0px 5px 0px;
+}
+.holiday-day-card h2{
+  text-align: left;
+  margin-left: 15px;
+  font-weight: normal;
+}
+.holiday-day-card:hover{
+  background-color:#accab7;
+  box-shadow: 2px 2px 3px rgb(0,0,0,0.25);
+  color: white;
+  transition: ease-in-out 0.25s;
+}
+.event-card{
+  background-color:rgb(204, 204, 221);
+  width: 100%;
+  padding: 5px;
+  border-radius: 15px;
+  margin: 5px 0px 5px 0px;
+  position: relative;
+  text-align: left;
+}
+.event-card:hover{
+  background-color:rgb(189, 172, 204);
+  box-shadow: 2px 2px 3px rgb(0,0,0,0.25);
+  color: white;
+  transition: ease-in-out 0.25s;
+}
+.event-time, .event-card-title{
+  width: fit-content;
+  text-align: left;
+  display: inline;
+}
+.event-card-title{
+  font-weight: normal;
+  margin-left: 15px;
+}
+.event-time{
+  position: absolute;
+  left: 0;
+  margin-left: 35vw;
+  top: 0;
+  transform: translate(0, -5px);
+}
+.event-desc{
+  margin-left: 40px;
+  font-style: italic;
+  color: rgb(0,0,0, 0.5);
+}
+.prev, .next{
+  background-color: whitesmoke;
+  border-radius: 8px;
+  font-size: 14pt;
+}
+.day-selector-menu{
+  display: relative;
+}
+.prev{
+  position: absolute;
+  left: 0;
+  margin-left: 30vw;
+}
+.next{
+  position: absolute;
+  left: 0;
+  margin-left: 70vw;
 }
 
 /* Event Page */
@@ -228,9 +338,15 @@ th {
   position: absolute;
   right: 0;
   top: 0;
-  padding: 0;
+  padding: 2px;
   margin-right: 15px;
-  transform: translate(0, -15px);
+  transform: translate(0, -5px);
+  color: white;
+  border-radius: 8px;
+  font-size: 15pt;
+}
+.delete-button:hover{
+  background-color: rgb(0,0,0,0.25);
 }
 .event-row-2 p{
   margin-top: 5px;
