--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,13 @@ body{
 }
 
 /* navigation */
+.create-event-button{
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  margin-right: 20px;
+  margin-bottom: 20px;
+}
 .navigation-links {
   display: inline;
   margin-right: 40px;
@@ -368,12 +375,16 @@ input[type=checkbox]{
 }
 form{
   width: 25%;
-  margin-left: 38%;
   background-color: whitesmoke;
   border-radius: 10px;
-  margin-top: 45px;
-  padding-top: 12px;
-  padding-bottom: 12px;
+  position: fixed;
+  z-index: 1;
+  right: 0;
+  bottom: 0;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+  padding-top: 10px;
 }
 form:hover{
   box-shadow: 2px 2px 3px rgb(0,0,0,0.25)
@@ -411,6 +422,33 @@ form:hover{
 .create-event-submit:hover{
   background-color:#6b9080;
   transition: ease-in-out 0.3s;
+}
+.close-button{
+  position:absolute;
+  right: 0;
+  bottom: 0;
+  border: 0px;
+  background-color: rgb(0,0,0,0);
+  margin-bottom: 145px;
+  margin-right: 20px;
+  font-size: 12pt;
+  padding: 0px;
+  z-index: 2;
+}
+.close-button:hover{
+  color: red;
+  transition: ease-in-out 0.25s;
+}
+.create-event-button{
+  background-color: rgb(51, 55, 59);
+  padding: 5px 10px 5px 10px;
+  border: none;
+  border-radius: 8px;
+  color: white;
+}
+.create-event-button:hover{
+  background-color:#6b9080;
+  box-shadow: 2px 2px 3px rgb(0,0,0,0.2);
 }
 
 /* Event/Holiday card coloring */
